recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:5: error: not found: value currrent
    currrent(step);
    ^Tree:5: error: not found: value step
    currrent(step);
             ^